2024-10-08 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/SDCCopt.c,
	  src/SDCCopt.h,
	  src/stm8/ralloc.c:
	  Code cleanup using C99 features.

2024-10-07 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/SDCCopt.c:
	  Optimize out some assignments followed by casts, part of RFE #937.
	* src/stm8/peep.c,
	  src/stm8/peeph.def:
	  Merge some offset calculations into stm8 instructions.

2024-10-07 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/mcs51/gen.c:
	  Fix a code generation bug in pointer write (register save/restore order).
	* src/z80/gen.c:
	  Improve flexibility of handling of rematerialized on-stack addresses.
	* src/SDCCcse.c,
	  src/SDCCloop.c,
	  src/SDCCopt.c:
	  unsetDefsAndUses at uses of remiCodeFromeBBlockcalls.

2024-10-04 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/SDCCopt.c,
	  src/mcs51/gen.c:
	  Fix bug #3783.

2024-09-30 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/SDCCopt.c:
	  Disable an optimization while bug #3783 is being looked into.
	* doc/sdccman.lyx,
	  src/port.h:
	  Remove references to obsolete RLC, RRC iCode.

2024-09-27 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/SDCCmain.c:
	  Fix an issue in command line parsing.

2024-09-26 Philipp Klaus Krause <philipp@colecovision.eu>

	* doc/sdccman.lyx,
	  src/SDCCmain.c:
	  Make the official standard names and nicknames the most prominent way to refer to standards in documentation.

2024-09-23 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/SDCCopt.c,
	  src/SDCCsymt.c,
	  src/SDCClospre.cc:
	  Improve handling of nested struct/union/array, part of RFE #937.

2024-09-20 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/stm8/gen.c:
	  Improve handling of rematerialized stack locations.

2024-09-19 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/hc08/gen.c,
	  src/mos6502/gen.c:
	  Assertions to help track down bug #3781.

2024-09-18 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/z80/peeph.def: